fix Join btn visibility bug

--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -26,7 +26,7 @@
   left: 50%;
   height: 3px;
   width: 0;
-  background: transparent;
+  background: var(--main-color);
   transition: width .5s ease, background-color .5s ease, left .5s ease;
 }
 
